--- a/src/views/realTimeProducts.handlebars
+++ b/src/views/realTimeProducts.handlebars
@@ -1,5 +1,4 @@
-<h1>Productos en Tiempo Real</h1>
-<h2>Lista de Productos</h2>
+<h1>Productos en tiempo real</h1>
 <div class="productContainer" id="productsList"></div>
 
 <h2>Agregar un producto:</h2>
