--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -88,6 +88,13 @@ a{
   color: aliceblue;
   padding: 0px 20px;
 }
+.antSig{
+  color: blue;
+  text-decoration: underline;
+}
 a:hover{
+  color: black;
+}
+.paginacion{
   color: black;
 }
