--- a/src/views/home.handlebars
+++ b/src/views/home.handlebars
@@ -1,7 +1,7 @@
 <h1>Estos son mis productos</h1>
 
 <div class="productContainer">
-{{#each productos}}
+{{#each products}}
         <div class="cards">
             <h2>Nombre: {{this.title}}</h2>
             <p>Precio: {{this.price}}</p>
@@ -11,8 +11,25 @@
         </div>
 {{/each}}
 </div>
-
-
+<div>
+    <nav>
+        <ul>
+            <li class="paginacion">
+                {{#if hasPrevPage}}
+                    <a class="antSig" href="/?page={{prevPage}}"> Anterior </a>
+                {{/if}}
+            </li>
+            <li class="paginacion">
+                <p>Pagina {{currentPage}} de {{totalPages}} </p>
+            </li>
+            <li class="paginacion">
+                {{#if hasNextPage}}
+                    <a class="antSig" href="/?page={{nextPage}}"> Siguiente </a>
+                {{/if}}
+            </li>
+        </ul>
+    </nav>
+</div>
 <script src="https://cdn.socket.io/4.7.3/socket.io.min.js"></script>
 <script src="js/main.js"></script>
 
